# Autotube

./: .gitignore  .pre-commit-config.yaml  APLIKASI_INFO.md  AUTO_UPDATE_GUIDE.md  BUGS_AND_ISSUES.md  COPY_CLAUDE_HOPKINS_STYLE.md  COPY_DAVID_OGILVY_STYLE.md  COPY_EUGENE_SCHWARTZ_STYLE.md  COPY_GARY_HALBERT_STYLE.md  HIGH_PRIORITY_FIXES.md  LANDING_PAGE_COPY.md  MISSING_TOOLS_ANALYSIS.md  Makefile  NEW_FEATURES.md  QUICK_ANSWER.md  README.md  USAGE.md  plan.md  prd.md  pyproject.toml  requirements-dev.txt  requirements.txt  task.md
src/: __init__.py  __version__.py  main.py
src/backend/: __init__.py  downloader.py  loop_creator.py  video_generator.py
src/ui/: __init__.py  console_log.py  main_window.py  mode_a_tab.py  mode_b_tab.py  mode_c_tab.py  update_dialog.py
src/utils/: __init__.py  auto_updater.py  config_manager.py  ffmpeg_checker.py  ffmpeg_progress.py  file_logger.py  file_utils.py  notifications.py  validators.py
tests/: conftest.py
tests/unit/: test_auto_updater.py  test_config_manager.py  test_downloader.py  test_ffmpeg_progress.py  test_file_logger.py  test_loop_creator.py  test_notifications.py  test_validators.py  test_video_generator.py
